# learn_haskell

./: README.md  app.cabal  learn-haskell.cabal
app/: Main.hs  MapReduce.hs  Regex.hsc  RunProcess.hs  SafeDiv.hs  Sorting.hs  State.hs  Web.hs
app/hws/: AccessLogger.hs  Config.hs  ConfigParser.hs  ErrorLogger.hs  Headers.hs  Main.hs  Options.hs  Parse.hs  Response.hs  ServerRequest.hs  ServerState.hs  Util.hs  httpd.conf
app/hws/Module/: CGI.hs
app/hws/Module/DynHS/: GHCUtil.hs
hws-cgi-2006.11.27/: LICENSE  Makefile  README  hws-cgi.cabal.bak  hws.cabal
hws-cgi-2006.11.27/conf/: httpd.conf
hws-cgi-2006.11.27/src/: Config.hs  Headers.hs  LogLevel.hs  Logger.hs  Main.hs  MimeTypes.hs  Request.hs  StaticModules.hsc
hws-cgi-2006.11.27/src/Module/: DynHS.hs  File.hs  Index.hs  Userdir.hs
hws-cgi-2006.11.27/src/Module/DynHS/: CGI.hs
