cabal-version: 3.0
name: hws-cgi
version: 0.1.0.0
license: MIT
license-file: LICENSE
executable hws
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base,
        array,
        unix,
        process,
        network,
        old-locale,
        old-time,
        parsec,
        directory,
        containers,
        html,
        network-uri,
        network-bsd,
        iproute
    ghc-options: -threaded
    other-modules:
        AccessLogger
        Config
        ConfigParser
        ErrorLogger
        Headers
        LogLevel
        Logger
        MimeTypes
        Module.CGI
        Module.Index
        Module.Userdir
        Module.File
        Options
        Parse
        Request
        Response
        ServerRequest
        ServerState
        StaticModules
        Util
